feat: add architecture-build template